make sure background shading covers entire background

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -5,7 +5,8 @@
 #background-home {
     background: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)), url('/static/images/homepage.jpg');
     background-size: cover;
-
+    background-repeat:no-repeat;
+    height: 100vh;
       }
 /* limit form width */
 .my-form {
@@ -22,18 +23,7 @@
 #card {
   width:25vw ;
 }
-  
-  /* .card-body {
-    max-width: 100%;
-    max-height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    overflow: hidden;
-    font-size: calc(12px + 1vw);
-  } */
-
+ 
 .card-header {
     font-size: 30px;
 }
